--- a/museumapp/museumapp_index.css
+++ b/museumapp/museumapp_index.css
@@ -1,31 +1,68 @@
-.grid {max-width: 950px; display: grid; grid-template-columns: 1fr 1fr 1fr 1fr 1fr; grid-column-gap: 10px; row-gap: 25px;}
-.img {width:150px; height:auto;}
-.background {background-color: blanchedalmond;}
-.gallery {margin: 30px;}
-.title {text-align: center;}
+.grid {
+    max-width: 950px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-column-gap: 10px;
+    row-gap: 25px;
+    margin: 0 auto;
+    padding: 35px 15px 35px 15px
+}
 
-@media (max-width:800px) {
-    .grid {display: grid;
-      grid-template-columns: 1fr 1fr 1fr 1fr;
-    
+
+.txt-black{
+    color: black;
+    text-align: center;
+    padding-top: 35px;
+}
+
+.gallarybg {
+    background-color: #ffffff;
+    border-radius:  15px;
+}
+
+.img {
+    width: 150px;
+    height: auto;
+    border-radius: 20px;
+}
+
+.img:hover {
+    border-radius: 30px;
+}
+
+.background {
+    background-color: #FFBA00;
+}
+
+.title {
+    text-align: center;
+    color:white;
+}
+
+@media (max-width:825px) {
+    .grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
     }
-  }
-
-@media (max-width:640px) {
-.grid {display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-
-}
 }
 
-@media (max-width:480px) {
-    .grid {display: grid;
+@media (max-width:665px) {
+    .grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+@media (max-width:525px) {
+    .grid {
+        display: grid;
         grid-template-columns: 1fr 1fr;
     }
-    }
+}
 
 @media (max-width:350px) {
-    .grid {display: grid;
+    .grid {
+        display: grid;
         grid-template-columns: 1fr;
     }
-    }
+}
